Copyright and dependency cleanup (#9)